Tests in MenuViewerTest pass now