@@ -7,7 +7,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 
-
 import static org.mockito.Mockito.*;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -19,7 +18,6 @@ public class MenuViewerTest {
 
     @BeforeEach
     public void setup() {
-
         gui = mock(GUI.class);
         menu = new Menu();
         menuViewer = new MenuViewer(menu);
@@ -35,34 +33,38 @@ public class MenuViewerTest {
         ArgumentCaptor<String> textCaptor = ArgumentCaptor.forClass(String.class);
         ArgumentCaptor<String> colorCaptor = ArgumentCaptor.forClass(String.class);
 
-        verify(gui, times(3)).drawText(positionCaptor.capture(), textCaptor.capture(), colorCaptor.capture());
+        verify(gui, times(4)).drawText(positionCaptor.capture(), textCaptor.capture(), colorCaptor.capture());
 
-        assertEquals(new Position(52, 20), positionCaptor.getAllValues().getFirst());
-        assertEquals("PLAY", textCaptor.getAllValues().getFirst());
-        assertEquals("#FFFFFF", colorCaptor.getAllValues().getFirst());
+        assertEquals(new Position(54, 20), positionCaptor.getAllValues().get(0));
+        assertEquals("PLAY", textCaptor.getAllValues().get(0));
+        assertEquals("#FFFFFF", colorCaptor.getAllValues().get(0));
 
-        assertEquals(new Position(52, 21), positionCaptor.getAllValues().get(1));
+        assertEquals(new Position(53, 21), positionCaptor.getAllValues().get(1));
         assertEquals("SCORES", textCaptor.getAllValues().get(1));
         assertEquals("#00FFFF", colorCaptor.getAllValues().get(1));
 
-        assertEquals(new Position(52, 22), positionCaptor.getAllValues().get(2));
-        assertEquals("EXIT", textCaptor.getAllValues().get(2));
+        assertEquals(new Position(50, 22), positionCaptor.getAllValues().get(2));
+        assertEquals("INSTRUCTIONS", textCaptor.getAllValues().get(2)); // Added INSTRUCTIONS
         assertEquals("#FFFFFF", colorCaptor.getAllValues().get(2));
+
+        assertEquals(new Position(54, 23), positionCaptor.getAllValues().get(3));
+        assertEquals("EXIT", textCaptor.getAllValues().get(3));
+        assertEquals("#FFFFFF", colorCaptor.getAllValues().get(3));
     }
 
     @Test
     public void testDrawElementsCallsDrawLine() {
         menuViewer.drawElements(gui);
 
-        verify(gui, times(14)).drawLine(anyInt(), anyInt(), anyInt(), anyInt(), eq("*"), eq("#5ad4f2"));
+        verify(gui, times(16)).drawLine(anyInt(), anyInt(), anyInt(), anyInt(), eq("*"), eq("#5ad4f2"));
     }
-
 
     @Test
     public void testDrawLogo() {
         menuViewer.drawElements(gui);
 
+        // Verify that drawLogo is called with the correct parameters
         verify(gui).drawLogo(17, 5, "#f7fbfc");
     }
-
 }
+
